k8s-manifests/infra/postgres-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres-port
  ClusterIP: None
