k8s-manifests/infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - michaeloxo.tech
      secretName: michaeloxo-tls-secret
  rules:
    - host: michaeloxo.tech
      http:
        paths:
          - path: /api.(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend-service
                port:
                  number: 8000
          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend-service
                port:
                  number: 8000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: react-frontend-service
                port:
                  number: 80
